# cos

./: README.md  package-lock.json  package.json
app/: package-lock.json  package.json
app/src/: index.html  keyboards.json
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: main.rs
app/src/css/: keyboard.css  main.css  screens.css  variables.css
app/src/font/: font.css
app/src/img/: cursor.kra  cursor.kra~  cursor2.png~
app/src/js/: ble.js  keyboard.js  main.js  screens.js
remote/: ref.txt  remote.dxf  what.txt
remote/calib/acc/: acc.ino
remote/calib/gyro/: gyro.ino
remote/calib/mag/: mag.ino  magcalc.py
remote/cube/: cube.pde
remote/ino/best/: best.ino
remote/ino/ble/: ble.ino
remote/ino/ble-fusion-mlink/: ble-fusion-mlink.ino
remote/ino/fusion/: fusion.ino
remote/ino/fusion-mlink-ble/: imu-mlink-ble.ino
remote/ino/imu-btns/: imu-btns.ino
sketches/MadgwickAHRS/: keywords.txt
sketches/adafruit/: adafruit.ino
sketches/cube/: cube.pde
sketches/gyro-calibrate/: gyro-calibrate.ino
sketches/imu-btns/: NewMadgwick.cpp  NewMadgwick.h  imu-btns.ino
sketches/madgwick/: madgwick.ino
sketches/malaysian/: malaysian.ino
sketches/mlink/: mlink.ino
sketches/reefwing/: reefwing.ino
sketches/visualizer/: visualizer.pde
src/: index.html  keyboards.json
src-tauri/: Cargo.toml
src-tauri/capabilities/: default.json
src-tauri/src/: joycon.rs  main.rs  serial.rs
src/css/: keyboard.css  main.css  screens.css
src/img/glyphs/: export.py
src/js/: ahrs.min.js  joycon.js  keyboard.js  main.js  screens.js  serial.js
(+20 files in other folders)
